--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EHYA - best shop</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -36,28 +36,51 @@
     <section class="hero">
         <div class="container">
             <div class="hero-wrapper">
+                <span class="hero__overtitle"># READY TO BE COOL</span>
                 <h2 class="hero__title">
                     Cause Everyone <br> Deserve to be Cool <br> & Fashionable <br>
                 </h2>
-                <span class="hero__subtitle">How you can be a Cool People or Fashionista Society. To solve this you should wear a great clothes and updated your style. You can search here. Explore Now!</span>
-                <button class="hero-exploration">Take Exploration</button>
+                <span class="hero__subtitle">How you can be a Cool People or Fashionista Society. To solve <br> this you should wear a great clothes and updated your style. <br> You can search here. Explore Now!</span>
+                <button class="hero-button">Take Exploration</button>
                 <div class="hero-links">
-                    <a href="#" class="hero-links__item">COD Payment
-                    <img src="img" alt="Image: COD Payment" class="hero__image">
-                </a>
-                    <a href="#" class="hero-links__item">Guarantee
-                    <img src="img" alt="Image: Guarantee" class="hero__image">
-                </a>
-                    <a href="#" class="hero-links__item">Quality
-                    <img src="img" alt="Image: Quality" class="hero__image">
-                </a>
+                    <img src="img/hero/payment.svg" alt="Image: COD Payment" class="hero-links__image">
+                    <a href="#" class="hero-links__item">COD Payment</a>
+                    <img src="img/hero/guarantee.svg" alt="Image: Guarantee" class="hero-links__image">
+                    <a href="#" class="hero-links__item">Guarantee</a>
+                    <img src="img/hero/quality.svg" alt="Image: Quality" class="hero-links__image">
+                    <a href="#" class="hero-links__item">Quality</a>
                 </div>
+                <!-- /.hero-links -->
             </div>
             <!-- /.hero-wrapper -->
         </div>
         <!-- /.container -->
     </section>
     <!-- /.hero -->
+    <section class="collection">
+        <div class="container">
+            <div class="content-wrapper">
+                <div class="collection-grid">
+                    <img src="img/collection/image1.png" alt="Image: Collection" class="collection-grid__image">
+                    <img src="img/collection/image2.png" alt="Image: Collection" class="collection-grid__image">
+                    <img src="img/collection/image3.png" alt="Image: Collection" class="collection-grid__image">
+                </div>
+                <!-- /.collection-grid -->
+                <div class="collection-info">
+                    <h2 class="collection-info__title">New Winter </br> Collection</h2>
+                    <span class="collection-info__text">
+                        Now is Winter Season. Like the season, we choose some outfit and clothes based on Winter season. You can see more this collection by click See More button on below. Let’s buy Our Collection before all they’re gone. Use EHYA20 to get 20% Disc. 
+                    </span>
+                    <a href="#" class="collection-info__link"> Check Our Collection
+                        <img src="img/arrow-right.svg" alt="Logo: Best Shop Ehya" class="collection-info__image">
+                    </a>
+                </div>
+                <!-- /.collection-info -->
+            </div>
+            <!-- /.content-wrapper -->
+        </div>
+        <!-- /.container -->
+    </section>
 </body>
 
 </html>
