--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- /.hero -->
     <section class="collection">
         <div class="container">
-            <div class="content-wrapper">
+            <div class="collection-wrapper">
                 <div class="collection-grid">
                     <img src="img/collection/image1.png" alt="Image: Collection" class="collection-grid__image">
                     <img src="img/collection/image2.png" alt="Image: Collection" class="collection-grid__image">
@@ -81,6 +81,96 @@
         </div>
         <!-- /.container -->
     </section>
+    <!-- /.collection -->
+    <section class="trending">
+        <div class="container">
+            <div class="trending-wrapper">
+                <div class="trending-header">
+                    <h2 class="trending-header__title">Trending Items</h2>
+                    <div class="trending-header__links ">
+                        <a href="#" class="trending-items__bold">New Arrival</a>
+                        <a href="#" class="trending-items">Best Sellers</a>
+                        <a href="#" class="trending-items">Upcoming</a>
+                    </div>
+                </div>
+                <!-- /.trending-header -->
+                <div class="trending-grid">
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image1.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Minimalist Style</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$25.7</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 1 -->
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image2.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Luxury Gown</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$30.6</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 2 -->
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image3.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Full Coloristy</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$25.7</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 3 -->
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image4.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Pinky Winky</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$109</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 4 -->
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image5.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Holiday Vibes</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$51.2</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 5 -->
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image6.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Swaggie Shaggy</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$81.3</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 6 -->
+                    <div class="trending-grid__item">
+                        <img src="/img/tranding/image7.png" alt="" class="trending-grid__image">
+                        <span class="trending-grid__description">Red Formal</span>
+                        <div class="trending-grid__payment payment">
+                            <span class="payment__sum">$66.8</span>
+                            <img src="" alt="" class="payment__image">
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 7 -->
+                    <div class="trending-grid__item">
+                        <div class="trending-grid__button">
+                            <img src="img/tranding/plus.svg" alt="Icon: plus icon" class="trending-item__image">
+                            <span class="trending-item__description">See More </br> Collection</span>
+                        </div>
+                    </div>
+                    <!-- /.trending-grid__item 8 -->
+                </div>
+                <!-- /.trending-grid -->
+            </div>
+            <!-- /.content-wrapper -->
+    </section>
+    <!-- /.trending -->
 </body>
 
 </html>
