--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="trending-header">
                     <h2 class="trending-header__title">Trending Items</h2>
                     <div class="trending-header__links ">
-                        <a href="#" class="trending-items__bold">New Arrival</a>
+                        <a href="#" class="trending-items-bold">New Arrival</a>
                         <a href="#" class="trending-items">Best Sellers</a>
                         <a href="#" class="trending-items">Upcoming</a>
                     </div>
@@ -159,9 +159,9 @@
                     </div>
                     <!-- /.trending-grid__item 7 -->
                     <div class="trending-grid__item">
-                        <div class="trending-grid__button">
-                            <img src="img/tranding/plus.svg" alt="Icon: plus icon" class="trending-item__image">
-                            <span class="trending-item__description">See More </br> Collection</span>
+                        <div class="trending-grid__button button">
+                            <img src="img/tranding/plus.svg" alt="Icon: plus icon" class="button-image">
+                            <span class="button-description">See More </br> Collection</span>
                         </div>
                     </div>
                     <!-- /.trending-grid__item 8 -->
