--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <span class="trending-grid__description">Minimalist Style</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$25.7</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 1 -->
@@ -109,7 +109,7 @@
                         <span class="trending-grid__description">Luxury Gown</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$30.6</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 2 -->
@@ -118,7 +118,7 @@
                         <span class="trending-grid__description">Full Coloristy</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$25.7</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 3 -->
@@ -127,7 +127,7 @@
                         <span class="trending-grid__description">Pinky Winky</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$109</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 4 -->
@@ -136,7 +136,7 @@
                         <span class="trending-grid__description">Holiday Vibes</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$51.2</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 5 -->
@@ -145,7 +145,7 @@
                         <span class="trending-grid__description">Swaggie Shaggy</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$81.3</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 6 -->
@@ -154,7 +154,7 @@
                         <span class="trending-grid__description">Red Formal</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$66.8</span>
-                            <img src="" alt="" class="payment__image">
+                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 7 -->
