add slider feedbacks

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>EHYA - best shop</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -96,71 +97,71 @@
                 <!-- /.trending-header -->
                 <div class="trending-grid">
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image1.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image1.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Minimalist Style</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$25.7</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 1 -->
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image2.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image2.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Luxury Gown</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$30.6</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 2 -->
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image3.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image3.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Full Coloristy</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$25.7</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 3 -->
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image4.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image4.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Pinky Winky</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$109</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 4 -->
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image5.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image5.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Holiday Vibes</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$51.2</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 5 -->
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image6.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image6.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Swaggie Shaggy</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$81.3</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 6 -->
                     <div class="trending-grid__item">
-                        <img src="/img/tranding/image7.png" alt="" class="trending-grid__image">
+                        <img src="img/trand/image7.png" alt="" class="trending-grid__image">
                         <span class="trending-grid__description">Red Formal</span>
                         <div class="trending-grid__payment payment">
                             <span class="payment__sum">$66.8</span>
-                            <img src="/img/tranding/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
+                            <img src="img/trand/shopping-cart.svg" alt="Icon: shopping cart" class="payment__image">
                         </div>
                     </div>
                     <!-- /.trending-grid__item 7 -->
                     <div class="trending-grid__item">
                         <div class="trending-grid__button button">
-                            <img src="img/tranding/plus.svg" alt="Icon: plus icon" class="button-image">
+                            <img src="img/trand/plus.svg" alt="Icon: plus icon" class="button-image">
                             <span class="button-description">See More </br> Collection</span>
                         </div>
                     </div>
@@ -171,6 +172,48 @@
             <!-- /.content-wrapper -->
     </section>
     <!-- /.trending -->
+    <section class="feedbacks">
+        <div class="container">
+            <div class="swiper-container feedbacks-slider">
+                <img src="/img/quote.svg" alt="Icon: quote" class="swiper__image">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <span class="swiper-slide__text">
+                            "I absolutely love the designs and styles that Ehya creates..They are so different and innovative. I have bought several times from the collections and what I love is that they really are timeless pieces and the quality of the fabric is devine.... I look forward to seeing the new collections from season to season”
+                        </span>
+                        <span class="swiper-slide__description">
+                            Alicia Puma - Fashun Customer
+                        </span>
+                    </div>
+                    <div class="swiper-slide">
+                        <span class="swiper-slide__text">
+                            Barbie has long stood for female empowerment, not least through her fashion choices. To celebrate the start of a new season and a renewed energy that champions unbridled creativity, Vogue assembled an all-female team to reimagine how Barbie will live now.
+                       </span>
+                        <span class="swiper-slide__description">
+                            BY TWIGGY JALLOH
+                        </span>
+                    </div>
+                    <div class="swiper-slide">
+                        <span class="swiper-slide__text">
+                            An All-Female Team Reimagine Barbie And Her Dreamhouse For 2020.
+                            The writer and comedian’s Instagram Impressions series is by far the best thing to come out of lockdown
+                        </span>
+                        <span class="swiper-slide__description">
+                            BY NAOMI PIKE
+                        </span>
+                    </div>
+                    ...
+                </div>
+                <!-- /.swiper-wrapper -->
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+        <!-- /.slider-container -->
+    </section>
+    <!-- /.feedbacks -->
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
